fixed alignment on login box

--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ body {
 .login-box {
     position:absolute;
     top:43%;
-    left:38%;
+    left:center;
     scale:0;
     border-color: rgba(182, 182, 182, 0.8);
     text-align: center;
